<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/colorPrimary">

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/customTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:fontType="@string/sf_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/customTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/set_your_display_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:fontType="@string/sf_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customTextView" />

    <com.jachdev.commonlibs.widget.CustomEditText
        android:id="@+id/etName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccentDark"
        android:hint="@string/name"
        android:textSize="16sp"
        android:textColorHint="@color/colorAccentDark"
        android:textColor="@color/colorAccent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:maxLines="1"
        android:inputType="textPersonName|textCapWords"
        android:imeOptions="actionNext"
        app:fontType="@string/sf_light"
        app:emojiEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customTextView2" />

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/customTextView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/set_your_email"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:fontType="@string/sf_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <com.jachdev.commonlibs.widget.CustomEditText
        android:id="@+id/etEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccentDark"
        android:hint="@string/email"
        android:textSize="16sp"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccentDark"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        app:fontType="@string/sf_light"
        app:emojiEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customTextView3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail">

        <com.jachdev.commonlibs.widget.CustomButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/bg_btn_dialog"
            android:inputType="number|text"
            android:maxLines="3"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            app:fontType="@string/sf_medium" />

        <com.jachdev.commonlibs.widget.CustomButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/bg_btn_dialog"
            android:inputType="number|text"
            android:maxLines="3"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            app:fontType="@string/sf_medium" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>