<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/reliable"
        android:textAlignment="center"
        android:textColor="@color/darkGreyBlueTwo"
        android:textSize="32sp"
        app:fontType="@string/sf_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/tvContent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/intro_text_0"
        android:textAlignment="center"
        android:textColor="@color/darkGreyBlueTwo"
        android:textSize="24sp"
        app:fontType="@string/sf_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>