<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPrevious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSkip" />

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textColor="@color/darkGreyBlueTwo"
        android:textSize="16sp"
        app:fontType="@string/sf_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jachdev.commonlibs.widget.CustomButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/bg_btn"
        android:inputType="number|text"
        android:maxLines="3"
        android:text="@string/next"
        android:textColor="@color/colorAccent"
        app:fontType="@string/sf_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.jachdev.commonlibs.widget.CustomButton
        android:id="@+id/btnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/bg_btn"
        android:enabled="false"
        android:inputType="number|text"
        android:maxLines="3"
        android:text="@string/previous"
        android:textColor="@color/colorAccent"
        app:fontType="@string/sf_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>